examples/test/testpolicy5395.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5395
  namespace: namespace402
spec:
  podSelector:
    matchLabels:
      key13: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value47
          key45: value4
      podSelector:
        matchLabels:
          key47: value4
          key41: value30
